Change api method name
